--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ http://ihsan.net/
 http://ihsansencan.github.io/
 -->
         <meta charset="UTF-8">
-        <title>404 | Not Found.</title>
+        <title>404 | Not Found !</title>
 
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
         <meta name="description" content="iNotes is a comprehensive source of information on cyber security, ethical hacking, and other topics of interest to information security professionals." />
