--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ http://ihsansencan.github.io/
   <label for="tab3"><i class="fa fa-info-circle"></i> About</label>
   <!-- Tab 4 -->
   <input type="radio" name="inotes_tab" id="tab4" aria-controls="itab4">
-  <label for="tab4"><i class="fa fa-heart"></i> Donate Us</label>
+  <label for="tab4"><i class="fa fa-heart kalp"></i> Donate Us</label>
   <!-- Tab 5 -->
   <input type="radio" name="inotes_tab" id="tab5" aria-controls="itab5">
   <label for="tab5"><i class="fa fa-tags"></i> Tags</label>
